[package]
name = "mercenary"
version = "0.1.0"
description = "Sample malicious delegate program for SolBreach Level 3"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mercenary"

[features]
default = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
